--- a/gb/19/12/27/n11747928.md
+++ b/gb/19/12/27/n11747928.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/sloxqr240/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sloxqr240/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sloxqr240/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【十字路口】2020年中国经济九大趋势（上）</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/12/15e43e4082e2b282_ttl7dayB5M_20191227-____-DJY-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/15e43e4082e2b282_ttl7dayB5M_20191227-____-DJY-600x400.jpg" />
 <h6>中共最怕经济危机，看懂2020年中国经济九大趋势。（大纪元合成）
 </h6>
 <hr>
 <p>【大纪元2019年12月27日讯】大家好，我是唐浩，今天都好吗？</p>
 <p><strong>⊙Opening</strong></p>
-<p>再过几天，2019年就要结束了，大家都在等待迎接新年。不过，今年<a href="https://github.com/sloxqr240/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9A%84%E7%BB%8F%E6%B5%8E.md">中国的经济</a>表现并不理想，不但许多经济问题陆续涌现，就连阿里巴巴创始人马云前几天也坦白说，最近有很多企业朋友纷纷向他借钱要周转。一天之内，他就接到五通借钱电话；一周之内，就有10个朋友要卖楼筹资金，显示今年中国企业都过得很不容易。</p>
+<p>再过几天，2019年就要结束了，大家都在等待迎接新年。不过，今年<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9A%84%E7%BB%8F%E6%B5%8E.md#1">中国的经济</a>表现并不理想，不但许多经济问题陆续涌现，就连阿里巴巴创始人马云前几天也坦白说，最近有很多企业朋友纷纷向他借钱要周转。一天之内，他就接到五通借钱电话；一周之内，就有10个朋友要卖楼筹资金，显示今年中国企业都过得很不容易。</p>
 <p>所以，今天要来跟大家聊聊中国经济，我们来分析、预测一下，明年的中国经济会出现哪些趋势？明年中国经济又可能出现哪些问题，需要中国的朋友们谨慎防范风险？这都是我们今天要跟大家聊的重点。</p>
 <p>不过我们要先强调一点，对中共稍微有了解的人都知道，官方的经济数据向来都存在着可信度的问题，并不可靠。但是，因为许多经济数据都被官方严密管控着，所以我们在某些地方可能还是得参考官方数据来做讨论，这一点还请大家留意。</p>
-<p><center><a src=""></a><a href="https://git.io/JeNeq"><img width="600" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/Gbbp1xbNSWI?list=PLM8fYlVFBOesLXZO-f0yepobR5vRLPXnr" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center><strong>⊙Comment</strong></p>
-<p>我认为，<a href="https://github.com/sloxqr240/djy/blob/master/gb/tag/2020%E5%B9%B4.md">2020年</a>的中国经济可能至少有九大趋势会出现：</p>
+<p><center><a src=""></a><a href="https://git.io/JvPbM"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/Gbbp1xbNSWI?list=PLM8fYlVFBOesLXZO-f0yepobR5vRLPXnr" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center><strong>⊙Comment</strong></p>
+<p>我认为，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/2020%E5%B9%B4.md#1">2020年</a>的中国经济可能至少有九大趋势会出现：</p>
 <h3>趋势一：多空交战 中国经济持续下滑</h3>
 <p>受到美中贸易战的冲击，中国这两年的经济持续下滑。根据中共官方数据，今年第一季度的经济增长率是6.4%，第二季度6.2%，第三季度则放缓到6%，创过去27年以来的最低水平。</p>
 <p>当然你可能也发现，怎么会每个季度的数据都稳定地减少0.2%，是不是看起来“很人工”、很可疑？</p>
 <p>其实，根据投资机构“晨星（Morningstar）”发布的《晨星中国诊断报告》（Morningstar China Diagnostics Report）指出，他们独立研究后发现，中国第3季度的经济增长应该只有3%，远低于官方公布的6%。而且经济放缓的主因，是因为消费者市场需求急速下降导致的，这一点跟我们之前在《一猪千金，中国经济标危机》节目里说的，相当一致。</p>
 <p>展望明年的中国市场环境，依然是空头交战，跟今年状况差不多少，包括美中贸易战还没停火、中国企业外移、资金外流、投资下降、高科技产业转型缺乏技术支撑等等，所以多空交战的结果，很可能会让明年中国经济持续下滑。</p>
 <p>中共官方智库也持同样的看法。中共发改委旗下的国家信息中心，首席经济师祝宝良刚刚公布了经济预测，说如果贸易战没有继续升级的话，明年中国经济增速将减缓到5.5%。</p>
-<p>而根据英国的牛津经济研究院（Oxford Economics）推估，今年第四季度中国经济增长率可能会放缓到5.7%，<a href="https://github.com/sloxqr240/djy/blob/master/gb/tag/2020%E5%B9%B4.md">2020年</a>大致会维持这个水平；而到了2030年，中国经济成长率将进一步下滑到4%，2040年则下降到2.8%。</p>
+<p>而根据英国的牛津经济研究院（Oxford Economics）推估，今年第四季度中国经济增长率可能会放缓到5.7%，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/2020%E5%B9%B4.md#1">2020年</a>大致会维持这个水平；而到了2030年，中国经济成长率将进一步下滑到4%，2040年则下降到2.8%。</p>
 <p>当然，别忘了，中共官方的经济数据都是“美化”过的，所以实际数据可能还不是如此。但整体来说，可以看出明年中国经济依然是持续下滑、力保稳定的大格局。</p>
 <h3>趋势二：美中达初步贸易协议 结构性改革难成</h3>
 <p>美中双方的第一阶段贸易协议，可能会在明年一月正式签署。特别是川普在圣诞夜当天向记者表示，他可能会与习近平举办一项仪式，签署贸易协议，似乎意味着第一阶段协议已经几乎尘埃落定。</p>
@@ -53,7 +53,7 @@
 <p>特别是今年中国企业在境外违约的债务金额，已经增长到19.7亿美元；而且今年新兴市场经济体对海外发行的高利率美元债券，金额成长到1148亿美元，其中有一半的债券来自中国。</p>
 <p>因此，信用评级公司穆迪（Moody&#8217;s Analytics）也提出警告，说中国企业的债务违约暴增，是全球经济的巨大威胁。</p>
 <p><strong>?小结</strong></p>
-<p>好，今天先带大家看了前四项明年<a href="https://github.com/sloxqr240/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9A%84%E7%BB%8F%E6%B5%8E.md">中国的经济</a>趋势，包括：</p>
+<p>好，今天先带大家看了前四项明年<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%9A%84%E7%BB%8F%E6%B5%8E.md#1">中国的经济</a>趋势，包括：</p>
 <p>趋势一：多空交战 中国经济持续下滑<br />
 趋势二：美中达初步贸易协议 结构性改革难成<br />
 趋势三：企业倒债 政府债台高筑 中国债务风暴扩大<br />
@@ -77,45 +77,49 @@
 中原雾锁险千重<br />
 祸漫红党一朝溃<br />
 乾坤净新天路通</p>
-<p>大纪元《<a href="https://github.com/sloxqr240/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md">世界十字路口</a>》制作组</p>
+<p>大纪元《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%81%E5%AD%97%E8%B7%AF%E5%8F%A3.md#1">世界十字路口</a>》制作组</p>
 <p>责任编辑：李昊 #</p>
 
 <hr>
-
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/27/n11747928.htm">【十字路口】2020年中国经济九大趋势（上）</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743842.htm">【十字路口】五项主因 港台掀青年抗争潮</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740707.htm">【十字路口】川普弹劾案5大疑点 北京为何低调</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729234.htm">【十字路口】TVB换老板 中共对香港发动四战</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726050.htm">【十字路口】台大选倒计时 这些暗招或出现</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721310.htm">【世界十字路口】会客室：债务风暴席卷中国</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11717140.htm">【十字路口】12/15美中达协议？若加税谁重伤</a></li>
-> <li><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744185.md">陈思敏：中国经济好坏 国企利润透端倪</a></li>
-> <li><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11728824.md">【新闻看点】专家：2020中国经济或硬着陆</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11746133.htm">决战2020 章天亮：为中共垮台做哪些准备？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11747231.htm">【新闻看点】内幕：华为产品价格为何低廉？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744047.htm">“你的密码归党管” 中共密码法明年上路</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11747263.htm">“痛风酒”老板大谈长寿之道 突然猝死台上</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741785.htm">《兰亭序》异彩绝代 书法家赞天下第一行书</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728511.htm">神的美好世界不接受自杀的人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744649.htm">英预言家：2020年中国发生革命 川普连任</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743411.htm">中共尽失人心 反习势力与保习派激战</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745443.htm">摩托车横穿李克强车队 险酿意外</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11747230.htm">【新闻看点】感激——美国人的年度关键词</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738977.htm">【思想领袖】哪些因素威胁美国文化与繁荣（下）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743842.htm">【十字路口】五项主因 港台掀青年抗争潮</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745357.htm">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743740.htm">高圆圆女儿受宠爱 赵又廷父母为孙女制圣诞礼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744287.htm">侯佩岑婚后8年首晒全家福 温馨庆圣诞</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744661.htm">Wendy彩排中骨折 Red Velvet后续行程未定</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744104.htm">韩国小狗在“幼儿园”排排睡 可爱极了</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11747928.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/25/n11743842.md#1">【十字路口】五项主因 港台掀青年抗争潮</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/23/n11740707.md#1">【十字路口】川普弹劾案5大疑点 北京为何低调</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/18/n11729234.md#1">【十字路口】TVB换老板 中共对香港发动四战</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/16/n11726050.md#1">【十字路口】台大选倒计时 这些暗招或出现</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/13/n11721310.md#1">【世界十字路口】会客室：债务风暴席卷中国</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/12/n11717140.md#1">【十字路口】12/15美中达协议？若加税谁重伤</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">视频：东莞虎门镇商业街出现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941108.md#1">【现场视频】黄冈蕲春刚刚解封 多处又封了</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">视频：东莞虎门镇商业街出现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940830.md#1">【一线采访视频版】：医院人满为患 求医无门</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934974.md#1">西班牙有狮子逛大街？ 原来是小狗冒充的</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936606.md#1">汤姆·汉克斯染疫 刘嘉玲忧伟仔澳洲拍戏状况</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11936756.md#1">《血卫》影评：用科技重生的背后 蕴藏玄机</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/27/n11747928.htm">【十字路口】2020年中国经济九大趋势（上）</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/12/27/n11747928.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
