--- a/gb/20/1/23/n11815867.md
+++ b/gb/20/1/23/n11815867.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jtswrk284/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jtswrk284/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陈思敏：中国楼市2020年棚改收官留后患</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/04/1504110856522603.jpg" />
 <h6>大陆各地房地产疯狂发展后深陷泥潭。（网络图片）
 </h6>
 <hr>
-<p>【大纪元2020年01月23日讯】据报导，<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E6%9D%8E%E5%85%8B%E5%BC%BA.md">李克强</a>1月22日视察青海来到西宁一处社区时表示：决定大规模推进老旧小区改造。这意味楼市今年来到棚改收官之年，当局试图用老旧小区改造来接力盘活<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md">经济</a>。</p>
-<p>根据Wind数据显示，2014年至2018，中国棚区改造实际执行户数分别是：470 万、601万、606万、609万、626万；棚改明显于2015年开始暴冲，那是因为2015年是地方政府债务的还债年，于是推行棚改货币化安置，即以现金补偿旧区居民自行购置新房，而资金来源是被指从央行接上水管子的PSL（抵押补充<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E8%B4%B7%E6%AC%BE.md">贷款</a>）。</p>
-<p>在央行货币工具PSL助力之下，棚改的速度大大提升、地方政府债务的黑天鹅飞走、当地GDP被拉动、房企高库存也化解。然后房企将手中库存卖掉后，又去地方政府手中买地，资金经过“央行—棚改户—房企—地方政府”的一再回圈，地价、房价也随之一轮轮暴涨，特别是在地<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md">经济</a>薄弱的三四线城市食髓知味，棚改井喷。</p>
+<p>【大纪元2020年01月23日讯】据报导，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%9D%8E%E5%85%8B%E5%BC%BA.md#1">李克强</a>1月22日视察青海来到西宁一处社区时表示：决定大规模推进老旧小区改造。这意味楼市今年来到棚改收官之年，当局试图用老旧小区改造来接力盘活<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>。</p>
+<p>根据Wind数据显示，2014年至2018，中国棚区改造实际执行户数分别是：470 万、601万、606万、609万、626万；棚改明显于2015年开始暴冲，那是因为2015年是地方政府债务的还债年，于是推行棚改货币化安置，即以现金补偿旧区居民自行购置新房，而资金来源是被指从央行接上水管子的PSL（抵押补充<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B4%B7%E6%AC%BE.md#1">贷款</a>）。</p>
+<p>在央行货币工具PSL助力之下，棚改的速度大大提升、地方政府债务的黑天鹅飞走、当地GDP被拉动、房企高库存也化解。然后房企将手中库存卖掉后，又去地方政府手中买地，资金经过“央行—棚改户—房企—地方政府”的一再回圈，地价、房价也随之一轮轮暴涨，特别是在地<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>薄弱的三四线城市食髓知味，棚改井喷。</p>
 <p>中国指数研究院的统计，2018年，全国300城市土地出让金总额为4.1773万亿元，同比增加2%。其中，一线城市土地出让金同比下降12%，二线城市土地出让金同比下降1%，三四线城市土地出让金则是同比大增15%，地方政府坐收15,736亿元。</p>
 <p>在恒大研究院的一篇文章中，曾对三四线城市房价的上涨情况进行了测算，文章选取了58个样本三四线城市，以2015年1月房价为基期，计算房价累计涨幅均值，2016年6月累计涨幅仅9%，2017年底升至35%，而2018年4月升至49%。也就是棚改副作用出现，三四线城市房价飞涨，甚至追平二线城市，小县城动辄百万的房子，让当地购房者吃不消。</p>
 <p>2019 年棚改户数315万套，相比2018年626万套，几近腰斩。与此同时，数百家房企破产、超8万家停业，多地政府发文防范在建工程停工，这些房企、这些烂尾项目，大部分在三四线城市。非数字的数据显示烂尾在三四线城市非常普遍，即随处可见楼盘悬挂着“工程烂尾，还我血汗钱”横幅。</p>
@@ -20,40 +20,44 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/23/n11815867.htm">陈思敏：中国楼市2020年棚改收官留后患</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/12/13/n11720513.htm">依赖土地财政 大陆13城市卖地收入破千亿</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/6/7/n11306551.htm">网文：未来中国需要多少房子？答案出人预料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/4/12/n11180357.htm">陆三四线城市一季度土地成交面积下降25.8%</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/4/8/n11170692.htm">大陆多地下调棚改目标 房企逃离三四线城市</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/3/21/n11128552.htm">大陆近6成省市高度依赖土地财政</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/19/n10920957.htm">菏泽打响楼市松绑第一枪 只因中共撑不住</a></li>
-> <li><a href="https://github.com/jtswrk284/djy/blob/master/gb/19/6/29/n11354643.md">中共为何抛4万亿改造城镇“老旧小”区？</a></li>
-> <li><a href="https://github.com/jtswrk284/djy/blob/master/gb/19/3/2/n11082988.md">网文：大陆房地产其实是一个庞氏骗局</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】全国确诊肺炎2067例56死 京沪等停省运</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821017.htm">大陆开启封路模式 封城封路封村封户</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821057.htm">专家：武汉肺炎源头或来自中共病毒实验室</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11821688.htm">【视频】疫情紧急 武汉小伙向国际求助</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801163.htm">除旧布新 怎样贴春联春贴不犯禁忌？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/7/2/12/n1621075.htm">丢勒兄弟的手</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/5/n11768578.htm">苏东坡书迹第一《寒食帖》荡过人生低谷的净与美</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818530.htm">武汉医院告急 向外求援 医护哭诉：顶不住了</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818378.htm">“武汉肺炎”出现另一种新型病毒</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11817620.htm">法国游客逃离武汉：前脚上飞机 军队已赶到</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819752.htm">纽约市长现身火场 关注华埠灾后安置（影音）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/18/n11801884.htm">【罗厨寻味】年菜系列之四：荷叶龙虾糯米蒸鸡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11817807.htm">于金山再次当选纽约中华公所主席（影音）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816400.htm">章子怡在美坐月子 发片鼓励国人抗击武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816941.htm">汤唯拍戏曾患肺炎 自责带女儿在身边同时感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818809.htm">陆剧《急诊科医生》 3年前演绎“武汉肺炎”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819909.htm">子瑜体恤医护人员辛劳 盼新年大家平安健康</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11819130.htm">港星林利抗癌成功 除夕夜发文：癌指数跑光光</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/13/n11720513.md#1">依赖土地财政 大陆13城市卖地收入破千亿</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/6/7/n11306551.md#1">网文：未来中国需要多少房子？答案出人预料</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/4/12/n11180357.md#1">陆三四线城市一季度土地成交面积下降25.8%</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/4/8/n11170692.md#1">大陆多地下调棚改目标 房企逃离三四线城市</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/3/21/n11128552.md#1">大陆近6成省市高度依赖土地财政</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/12/19/n10920957.md#1">菏泽打响楼市松绑第一枪 只因中共撑不住</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jtswrk284/djy/blob/master/gb/20/1/23/n11815867.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/12/n11038882.md#1" target="_blank">严家伟：我亲历的《星星诗刊》大冤案</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9109957.md#1" target="_blank">永远的传奇—从长春到世界（下）</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943833.md#1">疫情肆虐 美国民众集体诉讼中共当局六被告</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">【一线采访视频版】武汉市民：首先要活下来</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945347.md#1">武汉小区封楼20多天 又确诊2例 居民焦虑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/23/n11815867.htm">陈思敏：中国楼市2020年棚改收官留后患</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/23/n11815867.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
