--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/dexbaq286/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dexbaq286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dexbaq286/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dexbaq286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dexbaq286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dexbaq286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dexbaq286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dexbaq286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dexbaq286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=zcox2XJAms574" rel="nofollow">大纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=D8Ax1TtAnol74" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wf4N4cAnik9Rs0" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Sp8g2msSlexkp0" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oTQid61TrHh44" rel="nofollow">看中国</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=tOA2cZR4kmZ74" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Nug07FB5h2d64" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=C9gN1Qpkmpp74" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080606.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-320x200.jpg"><p align="center">公安部洗牌 港警丑闻曝光 牵出国安级爆料</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12079010.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VH-320x200.jpg"><p align="center">【最新疫情5·4】川普：世卫是一场灾难</p></a>
+<a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12079010.md#1" title="【最新疫情5·4】川普：世卫是一场灾难""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VH-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080606.md#1" title="公安部洗牌 港警丑闻曝光 牵出国安级爆料""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12080270.md#1" title="【一线采访】佳木斯居民：当地疫情越发严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/13faf2c7bcc86c5dede2218cd11570d7-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12079888.md#1" title="“我要爸爸妈妈”贵州12岁儿哭喊离世""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/2010-7-20-minghui-falun-gong-202255-0-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/2/n12077776.md#1" title="遭央视连骂三天 蓬佩奥反在中国人气飙升""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12078752.md#1" title="调查世卫和中共关系 川普手握一张王牌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-959790390-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12078772.md#1" title="美国多家肉厂现疫情 肉类会短缺和涨价吗""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/11/GettyImages-81639787-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/2/n12077007.md#1" title="【独家】早知疫情？中共频下生物安全通知""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/qcccc-yuyi-7788-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/dexbaq286/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://dexbaq286.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/3/25/n11974313.md#1">【思想领袖】章家敦：瘟疫下 中共垮台条件具备</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080783.md#1">日本将全国紧急状态延长至5月31日</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】川普：世卫是一场灾难</a><br>
-:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080606.md#1">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080641.md#1">美《60分钟》主持人染疫：真的很害怕</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】川普：世卫是一场灾难</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/3/25/n11974313.md#1">【思想领袖】章家敦：瘟疫下 中共垮台条件具备</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080783.md#1">日本将全国紧急状态延长至5月31日</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080606.md#1">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/4/n12080641.md#1">美《60分钟》主持人染疫：真的很害怕</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
 <a href="https://github.com/dexbaq286/djy/blob/master/gb/20/5/2/n12078410.md#1">两会前“红二代”发信对掐？中南海博弈激烈</a><br>
