--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1" title="遭央视连骂三天 蓬佩奥反在中国人气飙升""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078752.md#1" title="调查世卫和中共关系 川普手握一张王牌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-959790390-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wdr216.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080905.md#1">台湾磐石舰官兵染疫 专家：咎责勿无限上纲</a><br>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081030.md#1">【珍言真语】阿木台湾面支持抗争 生意起死回生</a><br>
-:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080864.md#1">南昌男子杀岳母及妻儿5人 网民热议</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080589.md#1">【疫情中的纽约人】“四维抗疫”的杨医生</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】川普：世卫是一场灾难</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080777.md#1">川普：中共犯了一个可怕错误 还不想承认</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/3/25/n11974588.md#1">持续更新：亚省“中共病毒”疫情一览</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080940.md#1">韩国官员：无迹象显示金正恩动过手术</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080831.md#1">对世卫失信心 美国继续独立研发肺炎疫苗</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080905.md#1">台湾磐石舰官兵染疫 专家：咎责勿无限上纲</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081030.md#1">【珍言真语】阿木台湾面支持抗争 生意起死回生</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080864.md#1">南昌男子杀岳母及妻儿5人 网民热议</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078410.md#1">两会前“红二代”发信对掐？中南海博弈激烈</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,409,471 人
+!共 355,410,753 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -58,7 +58,7 @@
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078752.md#1">调查世卫和中共关系 川普手握一张王牌</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080130.md#1">遭央视谩骂的第二个美国人 班农说了啥？</a><br>
-<a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080717.md#1">【疫情最前线】美日联手挺台参与世卫</a><br>
+<a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080717.md#1">【疫情最前线】美日联手挺台湾参与世卫</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080208.md#1">大陆女星盗小松菜奈照片 修图后谎称是自己</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079994.md#1">疫情掀影业内战 片方转网络 影院坐困愁城</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077007.md#1">【独家】早知疫情？中共频下生物安全通知</a><br>
