--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -8,7 +8,7 @@
 
 1.遭央视谩骂的第二个......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br></h3>4月下旬以来，有关香港警队及中共公安部异动消息频传，看似杂乱，却有......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
-<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080717.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/cdc98b830c7445b2b42bb61ee9f75357-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080717.md#1" target="_blank">【疫情最前线】美日联手挺台参与世卫</a><br></h3>中共当局隐瞒疫情致中共病毒播散全球，令超过24万人染病死亡。而台湾......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
+<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080717.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/cdc98b830c7445b2b42bb61ee9f75357-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080717.md#1" target="_blank">【疫情最前线】美日联手挺台湾参与世卫</a><br></h3>中共当局隐瞒疫情致中共病毒播散全球，令超过24万人染病死亡。而台湾......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080270.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/13faf2c7bcc86c5dede2218cd11570d7-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080270.md#1" target="_blank">【一线采访】佳木斯居民：当地疫情越发严重</a><br></h3>黑龙江省的中共病毒（武汉肺炎）不仅仅只是在哈尔滨、绥芬河集中爆发......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080488.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1195311959-1-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080488.md#1" target="_blank">美国安部报告：中共隐瞒病毒传染性抢占物资</a><br></h3>美国国土安全部文件显示，中共掩盖中共病毒（新冠病毒）疫情严重性以及......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079888.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/2010-7-20-minghui-falun-gong-202255-0-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079888.md#1" target="_blank">“我要爸爸妈妈”贵州12岁儿哭喊离世</a><br></h3>徐定国的父母、大伯因坚持修炼法轮功，遭到残酷的迫害，他的爷爷奶奶、......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
